--- a/Tarefas/Colunas/CoresDaColuna.css
+++ b/Tarefas/Colunas/CoresDaColuna.css
@@ -1,20 +1,22 @@
 .coluna1{
     background-color: grey;
-    border: 1px solid black;
+    color: white;
+    border: 3px solid black;
     flex: 1;
 }
 
 .coluna2{
     background-color: red;
-    border: 1px solid black;
+    color: white;
+    border: 3px solid black;
     flex: 3;
     margin-left: 20px;
-    heigh
 }
 
 header{
     background-color: green;
-    border: 1px solid black;
+    color: white;
+    border: 3px solid black;
     height: 100px;
     margin-bottom: 10px;
 }
