--- a/Tarefas/Colunas/CoresDaColuna.css
+++ b/Tarefas/Colunas/CoresDaColuna.css
@@ -1,22 +1,22 @@
 .coluna1{
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0.5);
     color: white;
-    border: 3px solid black;
+    border: 3px solid white;
     flex: 1;
 }
 
 .coluna2{
-    background-color: red;
+    background-color: rgba(135, 206, 250, 0.5);
     color: white;
-    border: 3px solid black;
+    border: 3px solid white;
     flex: 3;
     margin-left: 20px;
 }
 
 header{
-    background-color: green;
+    background-color: rgba(30, 143, 255, 0.5);
     color: white;
-    border: 3px solid black;
+    border: 3px solid white;
     height: 100px;
     margin-bottom: 10px;
 }
@@ -25,4 +25,10 @@ header{
     display: flex;
     width: 1350px;
     height: 500px;
+}
+
+body{
+
+background-image: url("https://media1.giphy.com/media/147MdvGH9SAL9S/giphy.gif?cid=ecf05e478wx78ewlgjg4c6adhw7u3wy2rrp1km62up440623&ep=v1_gifs_search&rid=giphy.gif&ct=g");
+background-size: cover;
 }
